--- a/page25.html
+++ b/page25.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create your own website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-88" data-rv-view="471" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/a">free website builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-88" data-rv-view="471" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -82,7 +82,7 @@
                   <h3 class="mbr-section-title display-2">Zuuth如瓷保濕緊緻精華</h3>
                   <div class="lead">
 
-                    <p>能為肌膚達到保濕、緊緻、控油,防禦等多效保養；在肌膚上能延展形成補水薄膜，感受由裡到外的水嫩感，為肌膚健康打底，皮膚感覺細緻好上妝，並賦予高能量的抗老修護，緊緻皮膚、全面賦活彈潤緊實，進一步創造完美年輕肌齡<br><br><br></p>
+                    <p>能為肌膚達到保濕、緊緻、控油,防禦等多效保養；在肌膚上能延展形成補水薄膜，感受由裡到外的水嫩感，為肌膚健康打底，皮膚感覺細緻好上妝，並賦予高能量的抗老修護，緊緻皮膚、全面賦活彈潤緊實，進一步創造完美年輕肌齡<br><br></p>
 
                   </div>
 
@@ -93,7 +93,7 @@
               
 
 
-              <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 25%;">
+              <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 38%;">
                   <div class="mbr-figure"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/heMPn2qgdTs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
               </div>
 
@@ -107,7 +107,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>× 本產品是高純度醫美級，每次只需一滴即可，當然貴婦請任性盡情使用（笑）。</p><p>添加任何屬性保養品中，效果加倍，勝過一般市面保濕產品。</p><p>膚觸如天使絲緞般質地，只需一滴抹上就像是敷了保濕面膜般。</p><p>＊另有取得靜宜大學人體臨床實驗證實“保濕度/彈性度/細緻度都有效提升”</p><p><br></p></div>
+            <div class="col-xs-12 lead"><p>× 本產品是高純度醫美級，每次只需一滴即可，當然貴婦請任性盡情使用（笑）。</p><p>添加任何屬性保養品中，效果加倍，勝過一般市面保濕產品。</p><p>膚觸如天使絲緞般質地，只需一滴抹上就像是敷了保濕面膜般。</p><p><br></p><p>×另有取得靜宜大學人體臨床實驗證實“保濕度/彈性度/細緻度都有效提升”</p><p><br></p></div>
         </div>
     </div>
 
@@ -157,9 +157,9 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-4 lead"><p>完美之鑰~"Cyclopeptide-5 五胜肽"，也叫做環胜肽，具有特殊環狀結構，是化妝品界第一支環狀胜肽，能準確地對抗皺紋及細紋。</p><p>為默克藥廠的專利成分，能平滑凹凸紋理、減少皺紋生成，並緊緻皮膚、增加飽滿彈性，進一步創造完美年輕肌齡。</p><p><br></p></div>
-            <div class="col-xs-12 col-md-4 lead"><p>利技術萃取「休眠素」延緩老化，提升皮膚天然防護力。</p><p>天然冬眠水仙鱗莖提取液，能夠減緩細胞增生，使肌膚如同水仙花苞冬眠再生，綻放新生美麗！</p></div>
-            <div class="col-xs-12 col-md-4 lead"><p><br></p><p>全球最大玻尿酸生產製造商全台獨家代理權。玻尿酸4.0水膜磁是由天然來源的透明質酸鈉HA通過交聯反應的到的超高分子量聚合物，為三維立體網狀結構，均勻覆蓋在皮膚表面，形成一層透氣的保護膜。原料結構強又緻密、彈性高 ，堆疊支撐力強，勝於一般玻尿酸。</p></div>
+            <div class="col-xs-12 col-md-4 lead"><p>➜ 完美之鑰~"Cyclopeptide-5 五胜肽"，也叫做環胜肽，具有特殊環狀結構，是化妝品界第一支環狀胜肽，能準確地對抗皺紋及細紋。</p><p>為默克藥廠的專利成分，能平滑凹凸紋理、減少皺紋生成，並緊緻皮膚、增加飽滿彈性，進一步創造完美年輕肌齡。</p><p><br></p></div>
+            <div class="col-xs-12 col-md-4 lead"><p>➜ 利技術萃取「休眠素」延緩老化，提升皮膚天然防護力。</p><p>天然冬眠水仙鱗莖提取液，能夠減緩細胞增生，使肌膚如同水仙花苞冬眠再生，綻放新生美麗！</p></div>
+            <div class="col-xs-12 col-md-4 lead"><p>➜ 全球最大玻尿酸生產製造商全台獨家代理權。玻尿酸4.0水膜磁是由天然來源的透明質酸鈉HA通過交聯反應的到的超高分子量聚合物，為三維立體網狀結構，均勻覆蓋在皮膚表面，形成一層透氣的保護膜。原料結構強又緻密、彈性高 ，堆疊支撐力強，勝於一般玻尿酸。<br></p></div>
         </div>
     </div>
 
