--- a/page5.html
+++ b/page5.html
@@ -9,12 +9,13 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Website Builder Description">
   <title>2</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -31,7 +32,7 @@
           <div class="row">
               <div class="col-xs-12 text-xs-center">
                   <h3 class="mbr-section-title display-2">高效深層養護區</h3>
-                  <small class="mbr-section-subtitle"><p><br>極光水亮分子課程 深層修復 使肌膚透亮出來<br>適合所有膚質的人氣課程<br><br>課程介紹<br>因毛孔阻塞引起的肌膚問題，深入毛孔深層淨化，平衡油脂分泌，清除惱人的痘痘粉刺內包<br>針對各個不同的需求深層保養使肌膚亮晢、水嫩保溼、抗敏鎮靜。<br><br><strong>［基礎保養］</strong><span style="color: rgb(140, 140, 140); font-size: 17px;">➜</span><strong>［膠原蛋白拔除粉刺］</strong><span style="color: rgb(140, 140, 140); font-size: 17px;">➜</span><strong>［手清粉刺］</strong><span style="color: rgb(140, 140, 140); font-size: 17px;">➜</span><strong>［RF煥光電流導入］</strong><span style="color: rgb(140, 140, 140); font-size: 17px;">➜</span><strong>［補水面膜］</strong></p><p><br><span style="font-style: normal;">醫美保養品結合換光導入儀</span><br><span style="font-style: normal;">讓深層清潔的皮膚達到更完美的療效</span><br><span style="font-style: normal;">（全療程純原液導入）</span></p></small>
+                  <small class="mbr-section-subtitle"><p><br>極光水亮分子課程 深層修復 使肌膚透亮出來<br>適合所有膚質的人氣課程<br><br>課程介紹<br>因毛孔阻塞引起的肌膚問題，深入毛孔深層淨化，平衡油脂分泌，修理頑固惱人的痘痘粉刺內包<br>針對各個不同的需求深層保養使肌膚亮晢、水嫩保溼、抗敏鎮靜。<br><br><strong>［基礎保養］</strong><span style="color: rgb(140, 140, 140); font-size: 17px;">➜</span><strong>［膠原蛋白拔除粉刺］</strong><span style="color: rgb(140, 140, 140); font-size: 17px;">➜</span><strong>［手清粉刺］</strong><span style="color: rgb(140, 140, 140); font-size: 17px;">➜</span><strong>［RF煥光電流導入］</strong><span style="color: rgb(140, 140, 140); font-size: 17px;">➜</span><strong>［補水面膜］</strong></p><p><br><span style="font-style: normal;">醫美保養品結合換光導入儀</span><br><span style="font-style: normal;">讓深層清潔的皮膚達到更完美的療效</span><br><span style="font-style: normal;">（全療程純原液導入）</span></p></small>
               </div>
           </div>
       </div>
@@ -89,7 +90,7 @@
                     <div class="mbr-plan-header card-block bg-primary">
                       <div class="mbr-plan-label">HOT!</div>
                       <div class="card-title">
-                        <h3 class="mbr-plan-title"><br>水膜磁鎖水美塑 療程</h3>
+                        <h3 class="mbr-plan-title"><br>水膜磁鎖水美塑 療程<br><br></h3>
                         <small class="mbr-plan-subtitle"></small>
                       </div>
                       <div class="card-text">
@@ -97,11 +98,11 @@
                             <span class="mbr-price-value">體驗價$</span>
                             <span class="mbr-price-figure">1200</span><small class="mbr-price-term">/ 90min.</small>
                           </div>
-                          <small class="mbr-plan-price-desc"><span style="font-style: normal;"><strong>( 療程四堂 $ 4000 )</strong></span></small>
+                          <small class="mbr-plan-price-desc"><span style="font-style: normal;"><strong><br></strong></span><span style="font-style: normal;"><strong>( 療程四堂 $ 4000 )</strong></span></small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><p>適合任何肌膚</p><p><br></p><p>水膜磁是玻尿酸交聯聚合物，玻尿酸植物性膠原蛋白，適度補充膠原蛋白再表層肌膚加上獨家水膜磁在肌膚上能延展形成補水薄膜，感受由裡到外的水嫩感，為肌膚健康打底，讓皮膚感覺細緻好上妝，並賦予高能量的抗老修護，緊緻皮膚、全面賦活彈潤緊實，能為肌膚達到保濕、緊緻、控油、防禦等多效保養。</p><p><br></p><p><strong>（全療程純玻尿酸及水膜磁原液導入）</strong><br></p><p></p></div>
+                      <div class="mbr-plan-list"><p>適合任何肌膚</p><p>乾燥肌膚換回水嫩</p><p>水膜磁是玻尿酸交聯聚合物，玻尿酸植物性膠原蛋白，適度補充膠原蛋白再表層肌膚加上獨家水膜磁在肌膚上能延展形成補水薄膜，感受由裡到外的水嫩感，為肌膚健康打底，讓皮膚感覺細緻好上妝，並賦予高能量的抗老修護，緊緻皮膚、全面賦活彈潤緊實，能為肌膚達到保濕、緊緻、控油、防禦等多效保養。</p><p><br></p><p><strong>（全療程純玻尿酸及水膜磁原液導入）</strong><br></p><p></p></div>
                       
                     </div>
                 </div>
@@ -111,7 +112,7 @@
                     <div class="mbr-plan-header card-block bg-primary">
                       <div class="mbr-plan-label">HOT!</div>
                       <div class="card-title">
-                        <h3 class="mbr-plan-title">微導E鎮靜舒敏療程</h3>
+                        <h3 class="mbr-plan-title"><br>微導E鎮靜舒敏療程<br></h3>
                         <small class="mbr-plan-subtitle">&nbsp;</small>
                       </div>
                       <div class="card-text">
@@ -119,11 +120,11 @@
                             <span class="mbr-price-value">體驗價$</span>
                             <span class="mbr-price-figure">1200</span><small class="mbr-price-term">/ 90min.</small>
                           </div>
-                          <small class="mbr-plan-price-desc"><span style="font-style: normal;"><strong>( 療程四堂 $ 4000)</strong></span></small>
+                          <small class="mbr-plan-price-desc"><span style="font-style: normal;"><strong><br></strong></span><span style="font-style: normal;"><strong>( 療程四堂 $ 4000)</strong></span></small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><p>適合任何肌膚</p><p><br></p><p>維他命Ｅ可以保護細胞膜免於氧化性傷害以及紫外線的初期傷害還能補充平均皮膚的養分，可防止脂質的過氧化，防止肌膚老化加上洋甘菊護敏舒敏、減少紅腫現象有效防護環境對於肌膚的刺激與傷害。</p><p><br></p><p><strong>(全療程純維他命E洋甘菊原液導入)</strong></p><p></p></div>
+                      <div class="mbr-plan-list"><p>適合任何肌膚</p><p>敏感肌膚重建保護層</p><p><br></p><p>維他命Ｅ可以保護細胞膜免於氧化性傷害以及紫外線的初期傷害還能補充平均皮膚的養分，可防止脂質的過氧化，防止肌膚老化加上洋甘菊護敏舒敏、減少紅腫現象有效防護環境對於肌膚的刺激與傷害。</p><p><br></p><p><strong>(全療程純維他命E洋甘菊原液導入)</strong></p><p></p></div>
                       
                     </div>
                 </div>
@@ -133,7 +134,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web page builder</a></section><section class="mbr-section article mbr-section__container" id="content1-96" data-rv-view="1710" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/i">build your own website</a></section><section class="mbr-section article mbr-section__container" id="content1-96" data-rv-view="1710" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -155,8 +156,10 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
