--- a/page7.html
+++ b/page7.html
@@ -32,7 +32,7 @@
           <div class="row">
               <div class="col-xs-12 text-xs-center">
                   <h3 class="mbr-section-title display-2">基礎臉部修理養護</h3>
-                  <small class="mbr-section-subtitle"><span style="font-style: normal;">&nbsp;</span><br>適用各種膚質&nbsp;<br>基礎清粉刺/基礎保養/保濕導入/解決單一困擾<br><br><br>課程介紹<br>［基礎保養］➜［膠原蛋白拔除粉刺］➜［手清粉刺］➜［補水導入］➜［舒緩冰晶凍膜］<br><br><br></small>
+                  <small class="mbr-section-subtitle"><span style="font-style: normal;">&nbsp;</span><br>適用各種膚質&nbsp;<br>基礎清粉刺/基礎保養/保濕導入/解決單一困擾<br><br><br>課程介紹<br>［基礎保養］➜［膠原蛋白拔除粉刺］➜［手清粉刺］➜［補水導入］➜［舒緩冰晶凍膜］<br></small>
               </div>
           </div>
       </div>
@@ -59,7 +59,7 @@
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"></div>
+                      <div class="mbr-plan-list">[ 任一療程皆可加購黃金軟膜 ]&nbsp;</div>
                       
                     </div>
                 </div>
@@ -70,7 +70,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="1750" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/a">free site builder</a></section><section class="mbr-section article mbr-section__container" id="content1-97" data-rv-view="1750" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
